--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
         "react-scripts": "3.4.0",
         "react-twitter-embed": "^3.0.3",
         "reactstrap": "^8.7.1",
+        "serve": "^11.3.2",
         "socket.io-client": "^3.0.1",
         "validator": "^12.2.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "serve build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
